--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
 </head>
 
 <body onload="">
@@ -26,11 +28,12 @@
         <div class="card mx-auto mt-5 bg-transparent" style="width: 24rem;">
           <img
             src="https://thumbs.dreamstime.com/b/gabinete-de-madera-brillante-con-la-etiqueta-de-fichero-de-las-excusas-23859390.jpg"
-            class="card-img-top rounded-circle" alt="...">
+            class="card-img-top rounded-circle mb-3" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title">Your perfect excuse for today</h5>
-            <p class="card-text bg-warning bg-opacity-75 rounded-3 text-black" id="excuse">My dog ate my homework</p>
-            <a onclick="location.reload()" class="btn btn-primary">Generate excuse</a>
+            <h3 class="card-title">Your perfect excuse for today</h3>
+            <h3 class="mt-3 mb-3"><i class="bi bi-arrow-down-square"></i></h3>
+            <h5 class="card-text bg-warning bg-opacity-75 rounded-3 text-black" id="excuse">My dog ate my homework</h5>
+            <a onclick="location.reload()" class="btn btn-primary mt-5">Generate excuse</a>
           </div>
         </div>
       </div>
